--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+body{
+    background-color: rgb(46, 45, 45);
+}
+
 .scroll-none {
     scrollbar-width: none;
 }
